2011-06-29  Matevz Tadel  <matevz.tadel@ijs.si>

	Add more GTime to text functions, add GTime weed.

	* Gled/GTime.cxx:
	* Gled/GTime.h:
	Rename ToAscGMT() to ToAscUTC().
	Add functions ToDateTimeUTC/Local().

	* perllib/GLED_GledCore_Widgets.pm:
	Add weed TimeOut() displaying date and time from stone GTime.

2011-06-28  Matevz Tadel  <matevz.tadel@ijs.si>

	Make GTime streamable in a portable way (32 .vs. 64-bit long).

	* Gled/GTime.cxx:
	* Gled/GTime.h:
	Use Long64_t as data-type to make it properly streamable.
	Add functions ToAscGMT() and ToAscLocal() returning standard
	strings representations. Need to add short versions.
	Need to test on 32 bits (pretty sure some casts misssing).

	* Ephra/Mountain.cxx:
	* Glasses/ZQueen.cxx:
	Follow-up on changes in GTime.

2011-06-26  Matevz Tadel  <matevz.tadel@ijs.si>

	* Ephra/Saturn.cxx:
	White-space.

2011-06-24  Matevz Tadel  <matevz.tadel@ijs.si>

	* Ephra/Saturn.cxx:
	* Glasses/ZGlass.h:
	* Glasses/ZQueen.h:
	* GledView/FTW.cxx:
	Fix some compilation warnings with gcc-4.6.

2011-06-19  Matevz Tadel  <matevz.tadel@ijs.si>

	* Stones/ZRCStone.cxx:
	* Stones/ZRCStone.h:
	Removed files - replace with less confusing SRefCounted.

	* Stones/SRefCounted.cxx:
	* Stones/SRefCounted.h:
	Added files - replace ZRCStone. Also provide verison without
	virtual functions SRefCountedNV.

	* catalog.patch:
	Register also the SRefCountedNV.

2011-05-29  Matevz Tadel  <matevz.tadel@ijs.si>

	* Gled/GCRC32.cxx:
	* Gled/GCRC32.h:
	New helper class for doing CRC-32.

2011-03-06  Matevz Tadel  <matevz.tadel@ijs.si>

	* Ephra/Saturn.cxx:
	Increase wait time in Accept from 20s to 60s.
	This was too small when running with google heap checker.

2010-12-31  Matevz Tadel  <matevz.tadel@ijs.si>

	Mac fixes.

	* GledView/MCW_View.cxx:
	Add include for mac.

	* Pupils/Pupil.cxx:
	Fix initialization of GLEW for mac.

2010-12-19  Matevz Tadel  <matevz.tadel@ijs.si>

	Add A_Rnr::HandlePick() function -- it can be called via a